<package>
  <name>python_qt_binding</name>
  <version>0.2.12</version>
  <description>
    This stack provides Python bindings for Qt.
    There are two providers: pyside and pyqt.  PySide is released under
    the LGPL.  PyQt is released under the GPL.

    Both the bindings and tools to build bindings are included from each
    available provider.  For PySide, it is called "Shiboken".  For PyQt,
    this is called "SIP".

    Also provided is adapter code to make the user's Python code
    independent of which binding provider was actually used which makes
    it very easy to switch between these.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>
  <license>LGPL</license>
  <license>GPL</license>

  <url>http://ros.org/wiki/python_qt_binding</url>
  <author>Dave Hershberger</author>
  <author>Dorian Scholz</author>
  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbuild</build_depend>
  <build_depend>qt4-qmake</build_depend>
  <build_depend>python-qt-bindings</build_depend>

  <run_depend>python-qt-bindings</run_depend>

  <export>
    <rosbuild cmake_directory="${prefix}/cmake"/>
  </export>
</package>
